--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -91,3 +91,24 @@ spring.jackson.serialization.write-dates-as-timestamps=false
 # ========================================
 management.endpoints.web.exposure.include=health,info,metrics
 management.endpoint.health.show-details=always
+
+# ========================================
+# File Storage Configuration
+# ========================================
+
+# 개발/테스트 환경 (로컬 저장)
+file.upload.path.local=./uploads
+file.upload.path.local.absolute=C:/uploads  # Windows 절대 경로
+# file.upload.path.local.absolute=/home/user/uploads  # Linux 절대 경로
+
+# 운영 환경 (NFS 저장) - 배포 시 주석 해제
+# file.upload.path.nfs=/mnt/nfs/uploads
+# file.upload.enabled.nfs=true
+
+# 현재 활성화된 저장 방식
+file.upload.enabled.local=true
+file.upload.enabled.nfs=false
+
+# 최대 파일 크기
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
