--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.application.name=log2doc
 spring.datasource.url=jdbc:mariadb://localhost:3306/log2doc
 spring.datasource.username=admin
 # 실제 MariaDB 컨테이너에서 설정한 비밀번호로 변경 필요
-#spring.datasource.password=admin
-spring.datasource.password=1234
+spring.datasource.password=admin
+#spring.datasource.password=1234
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 # 연결 풀 설정 (Docker 환경에서 안정적인 연결을 위해)
@@ -101,11 +101,11 @@ management.endpoint.health.show-details=always
 file.upload.path.local=./uploads
 file.upload.path.local.absolute=C:/uploads  # Windows 절대 경로
 
-# 운영 환경 (NFS 저장) - flask 연동시 주석 해제
+# 운영 환경 (NFS 저장)
 # file.upload.path.nfs=/mnt/nfs/uploads
 # file.upload.enabled.nfs=true
 
-# 현재 활성화된 저장 방식 - flask 연동시 true, false 바꿔줘야 함
+# 현재 활성화된 저장 방식 (바꿔줘야함)
 file.upload.enabled.local=true
 file.upload.enabled.nfs=false
 
