refactor: flask 전송 url 프로퍼티스로 분리

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -52,6 +52,14 @@ app.jwt.expiration=86400000
 app.jwt.refresh.expiration=604800000
 
 # ========================================
+# Flask AI 서버 Configuration
+# ========================================
+# Flask AI 서버 기본 URL
+flask.base.url=http://localhost:5001
+# Flask 분석 엔드포인트
+flask.endpoint.analyze=/analyze
+
+# ========================================
 # Server Configuration
 # ========================================
 server.port=8080
