refactor: flask에 보낼 전송 url 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -58,6 +58,14 @@ app.jwt.refresh.expiration=604800000
 flask.base.url=http://localhost:5001
 # Flask 분석 엔드포인트
 flask.endpoint.analyze=/analyze
+# Flask 고급 분석 엔드포인트
+flask.endpoint.analyze-advanced=/analyze-advanced
+# Flask 리포트 수신 엔드포인트 (FlaskReportService 테스트용)
+flask.endpoint.receive-report=/receive-report
+# Flask 연결 타임아웃 (milliseconds)
+flask.connection.timeout=30000
+# Flask 읽기 타임아웃 (milliseconds)
+flask.connection.read-timeout=60000
 
 # ========================================
 # Server Configuration
