refactfix: 파일 저장 경로 오류 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -112,17 +112,8 @@ management.endpoint.health.show-details=always
 # File Storage Configuration
 # ========================================
 
-# 개발/테스트 환경 (로컬 저장)
-file.upload.path.local=./uploads
-file.upload.path.local.absolute=C:/uploads  # Windows 절대 경로
-
 # 운영 환경 (NFS 저장)
-# file.upload.path.nfs=/mnt/nfs/uploads
-# file.upload.enabled.nfs=true
-
-# 현재 활성화된 저장 방식 (바꿔줘야함)
-file.upload.enabled.local=true
-file.upload.enabled.nfs=false
+file.upload.path.nfs=/app/document
 
 # 최대 파일 크기
 spring.servlet.multipart.max-file-size=50MB
